--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,8 +1,8 @@
 .box {
   box-sizing: content-box;
   background-color: black;
-  padding: 20px;
-  min-width: 360px;
+  /* padding: 20px;
+  min-width: 360px; */
 }
 .logo {
   padding-top: 20px;
@@ -61,13 +61,16 @@ button {
 }
 .note {
   border-radius: 50%;
+  display: block;
+  margin: auto;
+  width: 100%;
 }
 .red {
   background-color: red;
   box-sizing: content-box;
   height: 270px;
-  padding: 20px;
-  min-width: 400px;
+  /* padding: 20px;
+  min-width: 400px; */
 }
 .red {
   color: white;
@@ -91,7 +94,7 @@ button {
   margin-bottom: 2em;
 }
 .ft {
-  width: 110%;
+  width: 100%;
 }
 .card {
   color: #26a3c9;
@@ -99,9 +102,30 @@ button {
   font-weight: bold;
   text-align: center;
   margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .carte p {
   text-align: center;
   color: #06060674;
-  margin-bottom: 4em;
+  margin-bottom: 2em;
+}
+.footer {
+  background-color: #25a2c3;
+  color: white;
+  text-align: center;
+}
+footer h2 {
+  font-size: 2em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  padding-top: 1em;
+}
+.footer a {
+  color: #c8e7f0;
+}
+.footer p {
+  margin-bottom: 0.5em;
+}
+.copyright {
+  padding: 50px;
 }
